--- a/anime-app/package.json
+++ b/anime-app/package.json
@@ -9,14 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "appwrite": "^13.0.1",
     "autoprefixer": "10.4.15",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
+    "firebase": "^10.7.1",
     "next": "13.4.19",
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.11.0",
+    "react-router-dom": "^6.21.1",
+    "react-toastify": "^9.1.3",
     "tailwindcss": "3.3.3"
   }
 }
